    * 0189 docsis_channels: Support for Frequency of Downstream Channels for Devices with DOCSIS MIB
    * 0190 docsis_signal_quality: New Check to monitor Signal Qualtiy on Devices with DOCSIS MIB
    * 0193 docsis_cm_status: New Check Status Check for Cable Modems with Docsis MIB.
    * 1070 printer_input/printer_output: New checks to monitor input/output sub-units of printers...
    * 1051 FIX: tcp_conn_stats: fix missing performance data...
    * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
    * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
    * 0187 FIX: hp_proliant_power: Fixed Wato configuration
    * 0192 FIX: oracle_rman_backups: Not longer try to make a inventory for broken plugin outputs
    * 0194 FIX: raritan_pdu_inlet: Check now outputs the correct values...
            NOTE: Please refer to the migration notes!
    * 1071 FIX: oracle_rman_backups: Only inventorize ARCHIVELOG / DB FULL / DB INCR entries...
    * 0195 FIX: fc_port: Check temporary disabled cause of problems with automatic detection...
            NOTE: Please refer to the migration notes!

    Multisite:
    * 1066 Implemented Dashboard Designer...
    * 1067 FIX: Fixed login problem in LDAP connector when no user filter specified...
    * 1094 FIX: sidebar snaping 'Tree of folders': fixed exception

    WATO:
    * 1064 FIX: Fixed rare issue with WATO communication in distributed setups (different OS versions)...
    * 1089 FIX: Snapshot restore: fixed exception during exception handling......
    * 1091 FIX: logwatch patterns: allow unicode text in pattern comment
    * 1092 FIX: logwatch: now able to enter unicode text into the "Pattern (Regex)" field
    * 0191 FIX: Added swp files to the ignore list for the WATO git feature...


1.2.5i5:
    Core & Setup:
    * 1012 Fix quoting of backslashes in custom checks with nagios core...
            NOTE: Please refer to the migration notes!