@@ -162,7 +162,7 @@ def inventory_esx_vsphere_hostsystem_state(info):
     if 'runtime.inMaintenanceMode' in data:
         return [(None, None)]
 
-def check_esx_vsphere_hostsystem_state(item, params, info):
+def check_esx_vsphere_hostsystem_state(_no_item, _no_params, info):
     data = esx_vsphere_hostsystem_convert(info)
     state = 0
     label = {}
@@ -187,8 +187,6 @@ def check_esx_vsphere_hostsystem_state(item, params, info):
         label['powerState'] = "(!)"
     messages.append("Power state: %s%s" % (powerState, label['powerState']))
 
-    if str(data['runtime.inMaintenanceMode'][0]) == 'True':
-        messages.append("System is in maintenance(!!)")
 
     return(state, ", ".join(messages))
 
@@ -197,7 +195,43 @@ check_info['esx_vsphere_hostsystem.state'] = {
   "check_function"      : check_esx_vsphere_hostsystem_state,
   "service_description" : "Overall state",
 }
+#.
+#   .--Maintenance---------------------------------------------------------.
+#   |       __  __       _       _                                         |
+#   |      |  \/  | __ _(_)_ __ | |_ ___ _ __   __ _ _ __   ___ ___        |
+#   |      | |\/| |/ _` | | '_ \| __/ _ \ '_ \ / _` | '_ \ / __/ _ \       |
+#   |      | |  | | (_| | | | | | ||  __/ | | | (_| | | | | (_|  __/       |
+#   |      |_|  |_|\__,_|_|_| |_|\__\___|_| |_|\__,_|_| |_|\___\___|       |
+#   |                                                                      |
+#   +----------------------------------------------------------------------+
+#   |                                                                      |
+#   '----------------------------------------------------------------------'
 
+def inventory_esx_vsphere_hostsystem_maintenance(info):
+    data = esx_vsphere_hostsystem_convert(info)
+    if 'runtime.inMaintenanceMode' in data:
+        current_state = str(data['runtime.inMaintenanceMode'][0]).lower()
+        print current_state
+        return [(None, { 'target_state' : current_state })]
+
+def check_esx_vsphere_hostsystem_maintenance(_no_item, params, info):
+    data = esx_vsphere_hostsystem_convert(info)
+    target_state = params['target_state']
+    current_state = str(data['runtime.inMaintenanceMode'][0]).lower()
+    state = 0
+    if target_state != current_state:
+        state = 2
+    if current_state == "true":
+        return state, "System running is in Maintenance mode"
+    else:
+        return state, "System not in Maintenance mode"
+
+check_info['esx_vsphere_hostsystem.maintenance'] = {
+  "inventory_function"  : inventory_esx_vsphere_hostsystem_maintenance,
+  "check_function"      : check_esx_vsphere_hostsystem_maintenance,
+  "service_description" : "Maintenace Mode",
+  "group"               : "esx_hostystem_maintenance",
+}
 
 #.
 #   .--Multipath-----------------------------------------------------------.
