@@ -1964,6 +1964,26 @@ register_check_parameters(
 )
 
 register_check_parameters(
+    subgroup_storage,
+    "esx_hostystem_maintenance",
+    _("ESX Hostsystem Maintenance Mode"),
+    Dictionary(
+        elements = [
+            ("target_state", DropdownChoice(
+                title = _("Target State"),
+                help = _("Configure the target mode for the system."),
+                choices = [
+                 ('true', "System should be in Maintenance Mode"),
+                 ('false', "System not should be in Maintenance Mode"),
+                ]
+            )),
+        ],
+    ),
+    None,
+    "dict"
+)
+
+register_check_parameters(
     subgroup_networking,
     "bonding",
     _("Status of Linux bonding interfaces"),
