@@ -8,6 +8,7 @@
     * 0190 docsis_signal_quality: New Check to monitor Signal Qualtiy on Devices with DOCSIS MIB
     * 0193 docsis_cm_status: New Check Status Check for Cable Modems with Docsis MIB.
     * 1070 printer_input/printer_output: New checks to monitor input/output sub-units of printers...
+    * 0196 esx_vsphere_hostsystem: New subcheck for maintenance mode...
     * 1051 FIX: tcp_conn_stats: fix missing performance data...
     * 1142 FIX: winperf_ts_sessions: fix computation, check has never really worked
     * 1090 FIX: zfsget: fixed exception which happened on incomplete zfs entries
